<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/warLayout"
    android:background="@drawable/background"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/warningsActivityCityName"
        android:textSize="26sp"
        android:textColor="@android:color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etCity"
        android:layout_gravity="center_horizontal"
        android:gravity="top"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orCoordinates"
        android:id="@+id/tvCoords"
        android:layout_gravity="center_horizontal"
        android:textSize="26sp"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/etN"
                    android:layout_weight="0.9"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="N"
                    android:id="@+id/tvN"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <Button
                android:id="@+id/btnWarnings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:onClick="btnWaringsClickAction"
                android:text="@string/Warnings"
                android:layout_weight="0" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/etE"
                    android:layout_weight="0.9"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="E"
                    android:id="@+id/tvE"
                    android:textColor="@android:color/white"
                    android:layout_marginRight="3sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnStorms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="btnStormsClickAction"
                android:text="@string/Storms"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myLocalization"
        android:id="@+id/btnLocalization"
        android:onClick="btnLocalizationClickAction"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="" android:textSize="20sp"
        android:textColor="@android:color/white" />

</LinearLayout>